--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             errorMessage.innerHTML = '';
 
             if (trackNumber) {
-                fetch('https://obscure-space-yodel-69gwwxxr64pg3r6g9-5000.app.github.dev/check-status', {
+                fetch('https://kzdsolution.co.za/check-status', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
